--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,13 +1,11 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-      <%= simple_form_for(cat) do |f| %>
-          <%= f.input :name %>
-          <%= f.input :address %>
-          <%= f.input :found_at, as: :date %>
-          <%= f.button :submit  %>
-      <% end %>
-    </div>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <%= simple_form_for(cat) do |f| %>
+        <%= f.input :name %>
+        <%= f.input :address %>
+        <%= f.input :found_at %>
+        <%= f.button :submit  %>
+    <% end %>
   </div>
 </div>
 
