--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,3 +1,7 @@
-<h1>Cats#show</h1>
-<p>Find me in app/views/cats/show.html.erb</p>
-<%= @cat.name %> - <%= @cat.address %> (<%= @cat.found_at %>)
+<h1>
+  <%= @cat.name %>
+</h1>
+<p>
+  <%= @cat.address %> (<%= @cat.found_at %>)
+</p>
+
