--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,6 +1,18 @@
-<h1>Cats#index</h1>
-<p>Find me in app/views/cats/index.html.erb</p>
-<% @cats.each do |cat| %>
-  <%= cat.name %> - <%= cat.address %> -
-  <%= link_to "delete", cat_path(cat), method: :delete %>
-<% end %>
+<h1>CAT FINDER</h1>
+
+<ul>
+  <% @cats.each do |cat| %>
+    <li>
+      <%= link_to cat_path(cat) do %>
+        <%= cat.name %> - <%= cat.address %>
+      <% end %>
+      -
+      <%= link_to "delete", cat_path(cat), method: :delete %>
+    </li>
+  <% end %>
+</ul>
+
+
+<br>
+
+<%= link_to 'new cat', new_cat_path, class: 'btn btn-primary'  %>
